--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
         "personalURL": "http://fernandaviegas.com/",
         "affiliation": "Google Brain",
         "affiliationURL": "http://g.co/brain"
+      },
+      {
+        "firstName": "Ian",
+        "lastName": "Johnson",
+        "personalURL": "http://enjalot.github.io/",
+        "affiliation": "Google Cloud",
+        "affiliationURL": "http://cloud.google.com"
       }
     ]
   },
