--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "name": "misread-tsne",
   "dependencies": {
     "d3": "^4.2.2"
+  },
+  "scripts": {
+    "build": "node bin/include.js > index.html"
   }
 }
