--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "main": "index.md",
   "name": "misread-tsne",
   "dependencies": {
-    "d3": "^4.2.2"
+    "d3": "^4.2.2",
+    "material-design-icons": "^3.0.1"
   },
   "scripts": {
-    "build": "node bin/include.js > public/index.html"
+    "build": " cp -rf node_modules/material-design-icons/iconfont/ public/ && node bin/include.js > public/index.html"
   }
 }
